@@ -1,3 +1,10 @@
+1999-01-23  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-libgtop-checks.m4 (GNOME_LIBGTOP_DOCU): New macro. This
+	checks whether you have the LibGTop documentation installed and
+	defines `HAVE_LIBGTOP_DOCU' if appropriate. Also provides automake
+ 	conditional.
+
 1999-01-20  Martin Baulig  <martin@home-of-linux.org>
 
 	* acinclude.m4 (ac_result): Unset CATOBJEXT so
